add new website from server na

--- a/xem-phim-moi/ve-binh-dai-ngan-ha-3/index.html
+++ b/xem-phim-moi/ve-binh-dai-ngan-ha-3/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1789,21 +1789,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/robot-biet-yeu" title="Rôbôt Biết Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/rang-buoc-phan-1" title="Ràng buộc (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/robot-biet-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rang-buoc-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rôbôt Biết Yêu
+             Ràng buộc (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             WALL-E
+             BONDING (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1811,21 +1811,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-re-cua-toi-la-mot-not-ruoi" title="Con rể của tôi là một nốt ruồi">
+          <a class="list-top-movie-link" href="/phim-moi/kiem-rong" title="Kiếm Rồng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-re-cua-toi-la-mot-not-ruoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-rong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Con rể của tôi là một nốt ruồi
+             Kiếm Rồng
             </span>
             <span class="list-top-movie-item-en">
-             My Son-in-law Is A Mole
+             Arahan
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1833,21 +1833,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-phan-dredd" title="Thẩm Phán Dredd">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-vuot-nguc" title="Hành trình vượt ngục">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-phan-dredd-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-vuot-nguc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thẩm Phán Dredd
+             Hành trình vượt ngục
             </span>
             <span class="list-top-movie-item-en">
-             Judge Dredd
+             The Condemned
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1855,21 +1855,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ki-niem-tuoi-thanh-xuan" title="Kỉ Niệm Tuổi Thanh Xuân">
+          <a class="list-top-movie-link" href="/phim-moi/anh-sang-cong-ly-2" title="Ánh Sáng Công Lý">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ki-niem-tuoi-thanh-xuan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-sang-cong-ly-2016-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kỉ Niệm Tuổi Thanh Xuân
+             Ánh Sáng Công Lý
             </span>
             <span class="list-top-movie-item-en">
-             Boyhood
+             I Am Wrath
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1877,21 +1877,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-na-guong" title="Mặt Nạ Gương">
+          <a class="list-top-movie-link" href="/phim-moi/mua-he-kinh-hai" title="Mùa hè kinh hãi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-na-guong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-he-kinh-hai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt Nạ Gương
+             Mùa hè kinh hãi
             </span>
             <span class="list-top-movie-item-en">
-             MirrorMask
+             I Know What You Did Last Summer
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
