add new website from server na

--- a/xem-phim-bo/tinh-yeu-tu-khong-thanh-co/index.html
+++ b/xem-phim-bo/tinh-yeu-tu-khong-thanh-co/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1709,28 +1709,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1743,6 +1721,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1766,40 +1766,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ringing-fate" title="Ringing Fate">
+          <a class="list-top-movie-link" href="/phim-moi/vo-chong-ho" title="Vợ chồng hờ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ringing-fate-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-chong-ho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ringing Fate
+             Vợ chồng hờ
             </span>
             <span class="list-top-movie-item-en">
-             Ringing Fate
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ho-chua" title="Hổ Chúa">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ho-chua-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hổ Chúa
-            </span>
-            <span class="list-top-movie-item-en">
-             The Tigers
+             Everything Will Be Fine
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1810,18 +1788,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-tran-smallville-phan-4" title="Thị Trấn Smallville (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/kiem-vong-chi-tu-hai-luu-van" title="Kiếm Võng Chi Tứ Hải Lưu Vân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-smallville-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-vong-chi-tu-hai-luu-van-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thị Trấn Smallville (Phần 4)
+             Kiếm Võng Chi Tứ Hải Lưu Vân
             </span>
             <span class="list-top-movie-item-en">
-             Smallville (Season 4)
+             The Fate Of Swordsman
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lien-minh-quan-su-phan-2" title="Liên Minh Quân Sư (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lien-minh-quan-su-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Liên Minh Quân Sư (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Advisors Alliance 2
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1832,18 +1832,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nicky-jam-nguoi-chien-thang" title="Nicky Jam: Người chiến thắng">
+          <a class="list-top-movie-link" href="/phim-moi/nang-serena" title="Nàng Serena">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nicky-jam-nguoi-chien-thang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nang-serena-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nicky Jam: Người chiến thắng
+             Nàng Serena
             </span>
             <span class="list-top-movie-item-en">
-             Nicky Jam: El Ganador
+             Serena
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1854,21 +1854,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dung-choc-gian-su-huynh-ta" title="Đừng Chọc Giận Sư Huynh Ta">
+          <a class="list-top-movie-link" href="/phim-moi/anastasia-once-upon-a-time" title="Anastasia: Once Upon a Time">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dung-choc-gian-su-huynh-ta-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anastasia-once-upon-a-time-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đừng Chọc Giận Sư Huynh Ta
+             Anastasia: Once Upon a Time
             </span>
             <span class="list-top-movie-item-en">
-             Fall in Love with My Badboy
+             Anastasia: Once Upon a Time
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
