add new website from server na

--- a/xem-phim-moi/sau-thang-va-mot-nam/index.html
+++ b/xem-phim-moi/sau-thang-va-mot-nam/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1781,40 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jo-koy-truc-tiep-tu-los-angeles-forum" title="Jo Koy: Trực tiếp từ Los Angeles Forum">
+          <a class="list-top-movie-link" href="/phim-moi/time-freak" title="Time Freak">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jo-koy-truc-tiep-tu-los-angeles-forum-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/time-freak-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jo Koy: Trực tiếp từ Los Angeles Forum
+             Time Freak
             </span>
             <span class="list-top-movie-item-en">
-             Jo Koy: Live from the Los Angeles Forum
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ridley-jones-phan-2" title="Ridley Jones (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ridley-jones-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ridley Jones (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Ridley Jones (Season 2)
+             Time Freak
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1825,18 +1803,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nho-khi-ta-yeu" title="Nhớ khi ta yêu">
+          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-bridge-hollow" title="Lời nguyền Bridge Hollow">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nho-khi-ta-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-bridge-hollow-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhớ khi ta yêu
+             Lời nguyền Bridge Hollow
             </span>
             <span class="list-top-movie-item-en">
-             Remember When
+             The Curse of Bridge Hollow
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nha-hang-trung-hoa-s6" title="Nhà Hàng Trung Hoa S6">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-hang-trung-hoa-s6-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhà Hàng Trung Hoa S6
+            </span>
+            <span class="list-top-movie-item-en">
+             Nhà Hàng Trung Hoa S6
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1847,21 +1847,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-sat-hai-nha-murdaugh-be-boi-tai-south-carolina" title="Vụ sát hại nhà Murdaugh: Bê bối tại South Carolina">
+          <a class="list-top-movie-link" href="/phim-moi/doi-dac-nhiem-s-w-a-t" title="Đội đặc nhiệm S.W.A.T.">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-sat-hai-nha-murdaugh-be-boi-tai-south-carolina-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-nhiem-swat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vụ sát hại nhà Murdaugh: Bê bối tại South Carolina
+             Đội đặc nhiệm S.W.A.T.
             </span>
             <span class="list-top-movie-item-en">
-             Murdaugh Murders: A Southern Scandal
+             S.W.A.T.
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1869,21 +1869,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/wonderful-world" title="Wonderful World">
+          <a class="list-top-movie-link" href="/phim-moi/teen-titans-go-cac-nu-sieu-anh-hung-dc-mayhem-trong-da-vu-tru" title="Teen Titans Go! &amp; Các nữ siêu anh hùng DC: Mayhem trong Đa vũ trụ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/wonderful-world-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/teen-titans-go-cac-nu-sieu-anh-hung-dc-mayhem-trong-da-vu-tru-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Wonderful World
+             Teen Titans Go! &amp; Các nữ siêu anh hùng DC: Mayhem trong Đa vũ trụ
             </span>
             <span class="list-top-movie-item-en">
-             Wonderful World
+             Teen Titans Go! &amp; DC Super Hero Girls: Mayhem in the Multiverse
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
