add new website from server na

--- a/xem-phim-moi/sau-thang-va-mot-nam/index.html
+++ b/xem-phim-moi/sau-thang-va-mot-nam/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1724,28 +1724,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1758,6 +1736,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1781,18 +1781,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/time-freak" title="Time Freak">
+          <a class="list-top-movie-link" href="/phim-moi/nhan-vien-cuu-ho-2" title="Nhân Viên Cứu Hộ 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/time-freak-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-vien-cuu-ho-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Time Freak
+             Nhân Viên Cứu Hộ 2
             </span>
             <span class="list-top-movie-item-en">
-             Time Freak
+             The Rescuers Down Under
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lan-lang-vuong-phi" title="Lan Lăng Vương Phi">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lan-lang-vuong-phi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lan Lăng Vương Phi
+            </span>
+            <span class="list-top-movie-item-en">
+             Princess Of Lanling King
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/me-tre-hoi-xuan" title="Mẹ Trẻ Hồi Xuân">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-tre-hoi-xuan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mẹ Trẻ Hồi Xuân
+            </span>
+            <span class="list-top-movie-item-en">
+             Young Mom Reboot
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/guong-mat-doi-tra" title="Gương Mặt Dối Trá">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/guong-mat-doi-tra-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gương Mặt Dối Trá
+            </span>
+            <span class="list-top-movie-item-en">
+             Huang Yan, Face on Lie
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1803,87 +1869,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-bridge-hollow" title="Lời nguyền Bridge Hollow">
+          <a class="list-top-movie-link" href="/phim-moi/thu-gui-nham" title="Thư Gửi Nhầm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-bridge-hollow-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-gui-nham-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời nguyền Bridge Hollow
+             Thư Gửi Nhầm
             </span>
             <span class="list-top-movie-item-en">
-             The Curse of Bridge Hollow
+             SeNT
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-hang-trung-hoa-s6" title="Nhà Hàng Trung Hoa S6">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-hang-trung-hoa-s6-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhà Hàng Trung Hoa S6
-            </span>
-            <span class="list-top-movie-item-en">
-             Nhà Hàng Trung Hoa S6
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-dac-nhiem-s-w-a-t" title="Đội đặc nhiệm S.W.A.T.">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-nhiem-swat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đội đặc nhiệm S.W.A.T.
-            </span>
-            <span class="list-top-movie-item-en">
-             S.W.A.T.
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/teen-titans-go-cac-nu-sieu-anh-hung-dc-mayhem-trong-da-vu-tru" title="Teen Titans Go! &amp; Các nữ siêu anh hùng DC: Mayhem trong Đa vũ trụ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/teen-titans-go-cac-nu-sieu-anh-hung-dc-mayhem-trong-da-vu-tru-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Teen Titans Go! &amp; Các nữ siêu anh hùng DC: Mayhem trong Đa vũ trụ
-            </span>
-            <span class="list-top-movie-item-en">
-             Teen Titans Go! &amp; DC Super Hero Girls: Mayhem in the Multiverse
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
