--- a/xem-phim-bo/phuong-lac-giang-ho/index.html
+++ b/xem-phim-bo/phuong-lac-giang-ho/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1711,18 +1711,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lam-on-dung-sung-toi-2" title="Làm Ơn Đừng Sủng Tôi 2">
+          <a class="list-top-movie-link" href="/phim-moi/tro-choi-tinh-ai-2" title="Trò Chơi Tình Ái">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-on-dung-sung-toi-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-tinh-ai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Làm Ơn Đừng Sủng Tôi 2
+             Trò Chơi Tình Ái
             </span>
             <span class="list-top-movie-item-en">
-             Please Don't Spoil Me Season 2
+             Gerald's Game
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-chien-1917" title="Thế Chiến 1917">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-chien-1917-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thế Chiến 1917
+            </span>
+            <span class="list-top-movie-item-en">
+             1917
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xich-bich-ban-dien-anh" title="Xích Bích: Bản điện ảnh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xich-bich-ban-dien-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Xích Bích: Bản điện ảnh
+            </span>
+            <span class="list-top-movie-item-en">
+             Red Cliff: Theatrical Version
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1733,62 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hai-nguoi-dan-ong-ruoi-phan-7" title="Hai người đàn ông rưỡi (Phần 7)">
+          <a class="list-top-movie-link" href="/phim-moi/cong-dia-nguc" title="Cổng Địa Ngục">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-nguoi-dan-ong-ruoi-phan-7-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-dia-nguc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hai người đàn ông rưỡi (Phần 7)
+             Cổng Địa Ngục
             </span>
             <span class="list-top-movie-item-en">
-             Two and a Half Men (Season 7)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-thanh-thien-co-quan-tai-rong" title="Bao Thanh Thiên: Cổ Quan Tài Rỗng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-thanh-thien-co-quan-tai-rong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bao Thanh Thiên: Cổ Quan Tài Rỗng
-            </span>
-            <span class="list-top-movie-item-en">
-             Tomb Empty Coffin
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-thuy-chien" title="Đại Thủy Chiến">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-thuy-chien-2015-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đại Thủy Chiến
-            </span>
-            <span class="list-top-movie-item-en">
-             Admiral
+             Devil's Gate
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1799,21 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/downton-abbey-2-thoi-dai-moi" title="Downton Abbey 2: Thời Đại Mới">
+          <a class="list-top-movie-link" href="/phim-moi/cuu-an-thit-nguoi" title="Cừu Ăn Thịt Người">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/downton-abbey-2-thoi-dai-moi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-an-thit-nguoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Downton Abbey 2: Thời Đại Mới
+             Cừu Ăn Thịt Người
             </span>
             <span class="list-top-movie-item-en">
-             Downton Abbey: A New Era
+             Black Sheep
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
